apps/homepage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
      annotations:
        diun.enable: "true"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      serviceAccountName: homepage-reader
      volumes:
        - name: homepage-nfs
          persistentVolumeClaim:
            claimName: homepage-nfs
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.7.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: homepage-nfs
              mountPath: /app/config
      nodeSelector:
        workload: general
