apps/homepage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: homepage
